<?xml version="1.0"?>
<package format="2">
  <name>uvc_ros_driver</name>
  <version>0.0.1</version>
  <description>The uvc_ros_driver package</description>

  <maintainer email="nicolas@todo.todo">nicolas</maintainer>
  <maintainer email="ztaylor@ethz.ch">Zachary Taylor</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>libuvc</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>ait_ros_messages</depend>
  <depend>roslib</depend>
  <depend>image_transport</depend>
  <depend>yaml_cpp_catkin</depend>
  <depend>cuckoo_time_translator</depend>

</package>
